--- a/src/css/components/palette.css
+++ b/src/css/components/palette.css
@@ -56,6 +56,12 @@
   gap: 1px;
 }
 
+@media (max-width: 415px) {
+  .palette {
+    grid-template-columns: repeat(auto-fit, minmax(27px, 1fr));
+  }
+}
+
 /* ==========================================================================
    Color Boxes
    ========================================================================== */
@@ -142,7 +148,6 @@
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  /* width: 45px; */
   overflow: hidden;
 }
 
@@ -150,10 +155,10 @@
   /* base styles */
   line-height: calc(var(--line-height-base) + 0.1);
   padding-left: var(--spacing-xxs);
-  background: var(--color-surface);
-  border: 1px solid --color-border;
+  background: var(--color-surface-select);
+  border: 1px solid var(--color-border);
   border-radius: var(--border-radius-md);
-  color: var(--color-text);
+  color: var(--color-text-select);
   font-size: var(--font-size-xxs);
   cursor: pointer;
   padding-right: var(--spacing-sm);
@@ -166,7 +171,7 @@
 }
 
 .format-select:hover {
-  border: 2px solid var(--color-primary);
+  border: 2px solid var(--color-text-select);
 }
 
 .format-select:focus {
@@ -174,23 +179,11 @@
   border-color: var(--color-border-focus);
 }
 
-
-/* Adjust arrow color in dark mode */
-@media (prefers-color-scheme: dark) {
-  .format-select {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 16 16'%3E%3Cpath fill='%23E5E7EB' d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/%3E%3C/svg%3E");
-  }
-}
-
 .copy-button {
-  /* position: absolute; */
   background: none;
   border: none;
   padding: var(--spacing-xs) 0;
   cursor: pointer;
-  /* right: -19px; */
-  /* top: 48%; */
-  /* transform: translateY(-20%); */
   z-index: 2;
   color: var(--color-text);
   opacity: 0.7;
@@ -200,7 +193,7 @@
 
 .copy-button:hover {
   opacity: 1;
-  transform: /*translateY(-50%)*/ scale(1.1);
+  transform: scale(1.1);
 }
 
 .copy-button svg {
